# nix-config

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  .treefmt.toml  .typos.toml  LICENSE  README.adoc  README.md  a.sh  flake.nix  justfile  q  statix.toml  udq
_required-files/: README.md  justfile
apps/: flake-module.nix
apps/benchmarks/: flake-module.nix
apps/check-metered/: check-metered.nu  default.nix  flake-module.nix
apps/nixvim/: flake-module.nix  justfile
apps/nixvim/config/: ftplugin.nix  window-picker.nix
apps/nixvim/nixvim-module/: cmp.nix  colorscheme.nix  default.nix  ftdetect.nix  ftplugin.nix  lazyvim-keys.nix  load-dotfiles.nix  luasnip.nix  snacks-explorer.nix  spell.nix  syntax.nix  ui.nix  which-key.nix
apps/restic-scrub/: .envrc  Cargo.toml  derivation.nix  flake-module.nix
apps/rustic-zfs/: derivation.nix  flake-module.nix  rustic-zfs
apps/wincompat-rename/: .envrc  .pre-commit-config.yaml  Cargo.toml  README.md  derivation.nix  flake-module.nix
apps/wincompat-rename/completions/: _wincompat-rename  wincompat-rename.bash  wincompat-rename.fish  wincompat-rename.nu
apps/wincompat-rename/src/: cli.rs  converter.rs  fs_utils.rs  lib.rs  main.rs  output.rs  safety.rs  walker.rs
apps/wincompat-rename/tests/: integration_tests.rs
apps/zfs-prune/: README.md  justfile  pyproject.toml
apps/zfs-prune/zfs_prune/: __main__.py
apps/zfs-snapshot-prune/: .envrc  README.md  derivation.nix  flake-module.nix  justfile  pyproject.toml
apps/zfs-snapshot-prune/tests/: test_zfs_snapshot_store.py
apps/zfs-snapshot-prune/zfs_snapshot_prune/: __main__.py  snapshot_utils.py  types.py  (+1 more)
archives/homeManagerModules/: chromium.nix  mopidy.nix
archives/nixosModules/: lightdm.nix
attributes/: deploy.nix
constants/: configs.nix  flake-module.nix  home-encrypted.nix  home.nix  hosts-encrypted.nix  rustic-ignorefile.nix
dotfiles/: stow  stow-remove
dotfiles/archives/: 2023-03-02 colorscheme-setup-for-various-programs.tar.zst
flake-output-attributes/: default.nix  homeManagerModules.nix
hm-configs/: flake-module.nix
hm-configs-sample/: flake-module.nix
hm-modules/: flake-module.nix
hm-modules/base24/: default.nix
hm-modules/de-gnome/: default.nix
hm-modules/de-plasma5/: default.nix
hm-modules/de-plasma6/: default.nix
hm-modules/generic-home/: default.nix
hm-modules/mpv/: default.nix
hm-modules/pistol/: default.nix
hm-modules/stateful/: default.nix
hosts/: README.adoc  README.md  flake-module.nix
hosts/eris/: TODO.md  flake-module.nix
hosts/horus/: flake-module.nix
hosts/isis/: default.nix  flake-module.nix
hosts/iso/: flake-module.nix
hosts/nixos-iso/: flake-module.nix
hosts/osiris/: flake-module.nix
modules/: autoaspm.nix
modules/base/: flake-module.nix
modules/generic/: flake-module.nix
modules/gnome/: flake-module.nix
modules/home-manager/: flake-module.nix
modules/kde/: flake-module.nix
modules/nixos/: flake-module.nix
modules/nixos-modules/: flake-module.nix
modules/nixosModules/: flake-module.nix
modules/profiles/: README.md  flake-module.nix
modules/profiles/base-home/programs/80-utilities/90-console/pistol/exiftool-wrapper/: derivation.nix  pyproject.toml
nixos-configs-sample/: flake-module.nix
nixos-modules/: flake-module.nix
nixos-modules/autoaspm/: .envrc  .gitignore  CLAUDE.md  README.md  autoaspm.py  derivation.nix  flake-module.nix  justfile  module.nix  pyproject.toml  shell.nix  test_autoaspm.py
nixos-modules/de-pantheon/: default.nix
nixos-modules/de-plasma5/: default.nix  display-manager.nix  expose-fhs-resources.nix  fcitx-wayland.nix  xdg-portal-flatpak.nix
nixos-modules/de-plasma6/: browser-integration.nix  default.nix  display-manager.nix  flatpak.nix  ime.nix  xdg-portal.nix
nixos-modules/generic-nixos/: davfs2.nix  default.nix  hardware.nix  home-manager.nix  keyboard.nix  locale.nix  nix.nix  pam.nix  sysctl.nix  systemd.nix  users.nix  zram.nix
nixos-modules/kde/: flake-module.nix
nixos-modules/nix-gc/: default.nix
nixos-modules/nix-store-gc/: default.nix
nixos-modules/nixos-gc/: .pre-commit-config.yaml  derivation.nix  flake-module.nix  justfile  module.nix  nixos_gc.py  pyproject.toml  shell.nix
nixos-modules/oci-container-auto-update/: default.nix
nixos-modules/programs/: lact.nix
nixos-modules/rustic-btrfs/: .clippy.toml  .editorconfig  .envrc  CLAUDE.md  Cargo.toml  SPEC.md  build.rs  flake-module.nix  justfile  nixos-module-test.nix  nixos-module.nix  prompt.txt
nixos-modules/rustic-btrfs/src/: backup.rs  btrfs.rs  cli.rs  lib.rs  lock.rs  logging.rs  main.rs  mocks.rs  progress.rs  traits.rs  workflow.rs
nixos-modules/rustic-btrfs/tests/: btrfs_real_test.rs  lock_test.rs  workflow_test.rs
nixos-modules/services-nix/: default.nix  nix-gc-system-generations.nix  nix-store-gc.nix
pkgs/: autoaspm.nix  autoaspm.py  pyproject.toml
pkgs/completions/: _autoaspm  autoaspm.bash  autoaspm.fish  autoaspm.nu
profiles/: flake-module.nix
profiles/base-nixos/: flake-module.nix
profiles/package-sets/: README.md  flake-module.nix
require-files/: README.md  justfile
shared/: flake-module.nix  hosts-encrypted.nix
shared/lib/: default.nix  rustic-ignorefile-factory.nix
templates/: flake-module.nix
templates/configurations/: flake.nix  justfile
templates/crane-flake-parts-example/: .editorconfig  .envrc  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake-module.nix  flake.nix  justfile  nixos-module.nix
templates/devshell/: .editorconfig_1  flake.nix
templates/devshell-flake-parts/: flake.nix
templates/devshell-git-hooks (WIP)/: flake.nix
templates/devshell-multi-inputs/: flake.nix
templates/devshell-numtide/: flake.nix
templates/home-configuration/: flake.nix  justfile
templates/mkshell/: flake.nix
templates/mkshell-advanced/: derivation.nix  flake.nix
templates/nix-shell/: shell.nix
templates/nixos-configuration/: flake.nix  justfile
templates/python-app-module/: .envrc  derivation.nix  flake-module.nix  pyproject.toml
(+1734 files in other folders)
