[package]
name = "wincompat-rename"
version = "0.1.0"
edition = "2021"
authors = ["wincompat-rename contributors"]
description = "CLI tool to rename files to Windows-compatible names"

[[bin]]
name = "wincompat-rename"
path = "src/main.rs"

[dependencies]
log = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
