[package]
name = "wincompat-rename"
version = "0.1.0"
edition = "2024"
description = "CLI tool to rename files to Windows-compatible names"

[[bin]]
name = "wincompat-rename"
path = "src/main.rs"

[dependencies]
log = "0.4"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

blanket_clippy_restriction_lints = "allow"      # allw to use restriction as group
restriction = { level = "warn", priority = -1 }
exit = "allow"                                  # `cli.rs` 에서 사용
implicit_return = "allow"                       # Omitting the return keyword whenever possible is idiomatic Rust code
missing_inline_in_public_items = "allow"
non_ascii_literal = "allow"
pub_use = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
