[package]
name = "rustic-btrfs"
version = "0.1.0"
edition = "2024"
links = "btrfsutil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# File locking
fs4 = "0.9"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# Logging and progress
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
chrono = "0.4"

# Backup functionality
rustic_core = "0.9.0"
rustic_backend = "0.5" # Updated to 0.5 for better compatibility

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
regex = "1.11"

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Cargo lints disabled: multiple_crate_versions is unavoidable with complex dependency trees
# and provides minimal value as transitive dependencies are often outside our control
cargo = { level = "allow", priority = -1 }
cargo_common_metadata = "allow"

# DENIED
unwrap_used = "deny"

# ALLOWED for quick-and-dirty code
expect_used = "allow"
todo = "allow"
unimplemented = "allow"

# =================================================================
# Restriction linters 개별 활성화
# =================================================================
# ALLOWED
exhaustive_enums = "allow"              # Adding #[non_exhaustive] to all enums reduces API ergonomics without clear benefit for this project
exhaustive_structs = "allow"            # Adding #[non_exhaustive] to all structs reduces API ergonomics without clear benefit for this project
implicit_return = "allow"               # Omitting the return keyword whenever possible is idiomatic Rust code
map_err_ignore = "allow"                # Using |_| in map_err is acceptable when the original error doesn't add value. Named parameters add noise without clarity.
min_ident_chars = "allow"               # Single character identifiers like `e` in error handling closures (|e|) are idiomatic and widely used in Rust. Requiring longer names adds noise without clarity.
missing_docs_in_private_items = "allow" # Requiring documentation for every private item is too restrictive and provides diminishing returns. Focus on public API documentation instead.
module_name_repetitions = "allow"       # Names like `LibBtrfs` in module `btrfs` are clear and follow Rust naming conventions. Avoiding repetition would make names less descriptive.
multiple_unsafe_ops_per_block = "allow" # Splitting unsafe operations into multiple blocks can reduce clarity when operations are conceptually related (e.g., FFI calls with related setup/cleanup).
non_ascii_literal = "allow"
pattern_type_mismatch = "allow"         # The suggested fixes would require changing all `if let Some(x) = &option` patterns to more verbose forms without meaningful benefit. The current patterns are clear and idiomatic.
pub_use = "allow"                       # Re-exporting with pub use is idiomatic for creating clean public APIs
single_call_fn = "allow"                # Functions called once can still improve readability and maintainability
str_to_string = "allow"                 # Both .to_string() and .to_owned() work correctly on &str. Enforcing .to_owned() provides no technical benefit and requires 23+ instances.
struct_excessive_bools = "allow"        # Configuration structs often have many boolean flags. Refactoring to enums/bitflags would reduce clarity for simple on/off options.
undocumented_unsafe_blocks = "allow"    # While safety comments are good practice, requiring them for all unsafe blocks (including trivial FFI calls) is too restrictive for this codebase.
unseparated_literal_suffix = "allow"    # Triggers on generated code (bindgen) which we cannot control

# WARNED
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
integer_division = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_trait_methods = "warn"
mod_module_files = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
partial_pub_fields = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_with_shorthand = "warn"
pub_without_shorthand = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
separated_literal_suffix = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"                         # UTF-8 characters span multiple bytes,
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
