[project]
name = "exiftool-wrapper"
version = "0.1.0"
description = ""
dependencies = ["tabulate==0.9.*"]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = ["mypy>=1.17.0", "types-tabulate==0.9.*"]

[project.scripts]
exiftool-wrapper = "exiftool_wrapper:entrypoint"

[tool.basedpyright]
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
